# Fastapi-example-app

./: docker-compose.yml  pyproject.toml
fastapi-application/: main.py
fastapi-application/core/: config.py
fastapi-application/core/models/: db_helper.py
